--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ matrix:
     - rust: nightly
   fast_finish: true
 script:
-    cargo build --verbose
-    cargo test --verbose
+  - cargo build --verbose
+  - cargo test --verbose
