--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,12 @@ lazy_static = "1.3.0"
 structopt = "0.2.15"
 structopt-derive = "0.2.15"
 bincode = "1.1.2"
+serde = "1.0.89"
+serde_derive = "1.0.89"
 
 [build-dependencies]
 cuckoofilter = {git = "https://github.com/mre/rust-cuckoofilter" }
 bincode = "1.1.2"
+serde = "1.0.89"
+serde_derive = "1.0.89"
 
