--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,11 @@ name = "tinysearch"
 version = "0.1.0"
 edition = "2018"
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
+wasm-bindgen="0.2"
 cuckoofilter = {git = "https://github.com/mre/rust-cuckoofilter" }
 lazy_static = "1.3.0"
 structopt = "0.2.15"
@@ -12,6 +16,7 @@ structopt-derive = "0.2.15"
 bincode = "1.1.2"
 serde = "1.0.89"
 serde_derive = "1.0.89"
+serde_json = "1.0.39"
 
 [build-dependencies]
 cuckoofilter = {git = "https://github.com/mre/rust-cuckoofilter" }
