--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-wasm-bindgen="0.2"
+wasm-bindgen = "0.2.40"
 cuckoofilter = {git = "https://github.com/mre/rust-cuckoofilter" }
 lazy_static = "1.3.0"
 structopt = "0.2.15"
@@ -17,6 +17,16 @@ bincode = "1.1.2"
 serde = "1.0.89"
 serde_derive = "1.0.89"
 serde_json = "1.0.39"
+
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+  'Document',
+  'Element',
+  'HtmlElement',
+  'Node',
+  'Window',
+]
 
 [build-dependencies]
 cuckoofilter = {git = "https://github.com/mre/rust-cuckoofilter" }
