--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ bincode = "1.1.2"
 serde = "1.0.89"
 serde_derive = "1.0.89"
 serde_json = "1.0.39"
+wee_alloc = "0.4.3"
 
 [dependencies.web-sys]
 version = "0.3.4"
@@ -34,3 +35,8 @@ bincode = "1.1.2"
 serde = "1.0.89"
 serde_derive = "1.0.89"
 walkdir = "2.2.7"
+
+[profile.release]
+opt-level = 's'  # Optimize for size.
+lto = true
+codegen-units = 1
