--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,18 +8,19 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-cuckoofilter = {git = "https://github.com/mre/rust-cuckoofilter" }
 lazy_static = "1.3.0"
 bincode = "1.1.2"
-serde = "1.0.89"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.39"
 wee_alloc = "0.4.3"
 wasm-bindgen = "0.2.40"
+bloomfilter = "0.0.12"
 
 [build-dependencies]
 bincode = "1.1.2"
-cuckoofilter = {git = "https://github.com/mre/rust-cuckoofilter" }
 walkdir = "2.2.7"
+bloomfilter = "0.0.12"
+serde = { version = "1.0", features = ["derive"] }
 
 [profile.release]
 opt-level = 's'  # Optimize for size.
