--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,6 @@ cuckoofilter = {git = "https://github.com/mre/rust-cuckoofilter" }
 lazy_static = "1.3.0"
 bincode = "1.1.2"
 serde = "1.0.89"
-serde_json = "1.0.39"
 wee_alloc = "0.4.3"
 wasm-bindgen = "0.2.40"
 
@@ -21,7 +20,11 @@ bincode = "1.1.2"
 cuckoofilter = {git = "https://github.com/mre/rust-cuckoofilter" }
 walkdir = "2.2.7"
 
+
 [profile.release]
 opt-level = 's'  # Optimize for size.
 lto = true
 codegen-units = 1
+
+[dev-dependencies]
+regex = "1.1.5"
