--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_script:
   - cargo install --force wasm-pack || true
   - wasm-pack --version
 script:
-  - INPUT_DIR=fixtures make build
+  - INPUT_DIR=fixtures make index pack
