--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,11 @@ lazy_static = "1.3.0"
 bincode = "1.1.2"
 serde = "1.0.89"
 wee_alloc = "0.4.3"
-wasm-bindgen = "0.2.40"
 serde_json = "1.0.39"
+
+[dependencies.wasm-bindgen]
+version = "^0.2"
+features = ["serde-serialize"]
 
 [build-dependencies]
 bincode = "1.1.2"
