--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,34 +1,6 @@
-[package]
-authors = ["Matthias Endler <matthias-endler@gmx.net>"]
-name = "tinysearch"
-version = "0.1.0"
-edition = "2018"
-
-[lib]
-crate-type = ["cdylib"]
-
-[dependencies]
-cuckoofilter = {git = "https://github.com/mre/rust-cuckoofilter" }
-lazy_static = "1.3.0"
-bincode = "1.1.2"
-serde = "1.0.89"
-wee_alloc = "0.4.3"
-
-[dependencies.wasm-bindgen]
-version = "^0.2"
-features = ["serde-serialize"]
-
-[build-dependencies]
-bincode = "1.1.2"
-cuckoofilter = {git = "https://github.com/mre/rust-cuckoofilter" }
-walkdir = "2.2.7"
-strip_markdown = "0.1.0"
-
-
-[profile.release]
-opt-level = 's'  # Optimize for size.
-lto = true
-codegen-units = 1
-
-[dev-dependencies]
-regex = "1.1.5"
+[workspace]
+members = [
+	"bin",
+	"shared",
+	"cuckoofilter"
+]
