--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ matrix:
     - rust: nightly
   fast_finish: true
 before_script:
-  - cargo install --force wasm-pack || true
+  - cargo install --force wasm-pack 
   - wasm-pack --version
-  - cargo install --path bin
+  - cargo install --force --path bin
 script:
   - tinysearch fixtures/index.json
