--- a/cuckoofilter/Cargo.toml
+++ b/cuckoofilter/Cargo.toml
@@ -2,6 +2,7 @@
 name = "tinysearch-cuckoofilter"
 version = "0.4.0"
 authors = ["Seif Lotfy <seif.lotfy@gmail.com>", "Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Florian Jacob <accounts+git@florianjacob.de>"]
+edition = "2018"
 
 # A short blurb about the package. This is not rendered in any format when
 # uploaded to crates.io (aka this is not markdown)
