--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -13,7 +13,7 @@ structopt = "0.3.7"
 structopt-derive = "0.4.0"
 tinysearch-shared = { path = "../shared", version = "0.2.1" }
 log = "0.4.8"
-reqwest = "0.9.24"
+reqwest = { version = "0.10", features = ["blocking", "json"] }
 semver = "0.9.0"
 serde_json = "1.0.44"
 flate2 = "1.0.13"
@@ -24,5 +24,5 @@ walkdir = "2.3.1"
 failure = "0.1.6"
 tempdir = "0.3.7"
 serde = "1.0.104"
-serde_derive = "1.0.102"
+serde_derive = "1.0.104"
 lazy_static = "1.4.0"
