Incorporate strip_markdown

--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -18,7 +18,6 @@ semver = "0.9.0"
 serde_json = "1.0.44"
 flate2 = "1.0.13"
 tar = "0.4.26"
-strip_markdown = "0.1.0"
 tinysearch-cuckoofilter = "0.4.1"
 walkdir = "2.3.1"
 failure = "0.1.6"
@@ -26,3 +25,4 @@ tempdir = "0.3.7"
 serde = "1.0.104"
 serde_derive = "1.0.104"
 lazy_static = "1.4.0"
+pulldown-cmark = "0.6.1"
