--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -22,6 +22,7 @@ lazy_static = "1.4.0"
 pulldown-cmark = "0.7.0"
 phf = "0.7.21"
 includedir = "0.5.0"
+wasm-bindgen = "0.2"
 
 [build-dependencies]
 includedir_codegen = "0.5.0"
