Inline cargo install for wasm-pack (#75)
* Inline cargo install for wasm-pack
* Use binary support on top of latest wasm-pack version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,8 @@ jobs:
           args: --all-features
 
       - name: Install wasm-pack
-        run: >
-          cargo install --force 
-                        --git https://github.com/boringcactus/wasm-pack.git
-                        --branch first-class-bins
+        run:
+          cargo install --force --git https://github.com/mre/wasm-pack.git --branch first-class-bins
 
       - name: Print wasm-pack version
         run: wasm-pack --version
