Fixes #102: replaced tempdir with tempfile crate (#110)

--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -15,7 +15,7 @@ log = "0.4.8"
 serde_json = "1.0.55"
 tinysearch-cuckoofilter = "0.4.1"
 failure = "0.1.8"
-tempdir = "0.3.7"
+tempfile = "3.1.0"
 serde = "1.0.111"
 serde_derive = "1.0.111"
 lazy_static = "1.4.0"
