--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tinysearch"
 authors = ["Matthias Endler <matthias-endler@gmx.net>"]
-version = "0.4.1"
+version = "0.5.0"
 edition = "2018"
 description = "A tiny search engine for static websites"
 license = "Apache-2.0/MIT"
@@ -11,17 +11,17 @@ homepage = "https://github.com/mre/tinysearch"
 [dependencies]
 argh = "0.1.3"
 tinysearch-shared = { path = "../shared", version = "0.2.1" }
-log = "0.4.8"
-serde_json = "1.0.55"
-tinysearch-cuckoofilter = "0.4.1"
-anyhow = "1.0"
+log = "0.4.11"
+serde_json = "1.0.58"
+cuckoofilter = "0.5.0"
+anyhow = "1.0.33"
 tempfile = "3.1.0"
-serde = "1.0.112"
-serde_derive = "1.0.112"
+serde = { version = "1.0.116", features = ["derive"] }
+serde_derive = "1.0.116"
 lazy_static = "1.4.0"
-pulldown-cmark = "0.7.1"
-phf = "0.7.21"
-includedir = "0.5.0"
+pulldown-cmark = "0.8.0"
+phf = "0.8.0"
+includedir = "0.6.0"
 
 [build-dependencies]
-includedir_codegen = "0.5.0"
+includedir_codegen = "0.6.0"
