--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -13,10 +13,14 @@ crate-type = ["cdylib"]
 
 [dependencies]
 bincode = "1.1.4"
-tinysearch-cuckoofilter = "0.4.0"
 lazy_static = "1.3.0"
 wee_alloc = "0.4.4"
 tinysearch-shared = { path = "../shared", version = "0.2.0" }
+
+[dependencies.cuckoofilter]
+version = "0.5.0"
+default-features = false 
+features = ["serde_support"]
 
 [dependencies.wasm-bindgen]
 version = "0.2.42"
