--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -7,5 +7,9 @@ description = "Shared libraries for tinysearch - a tiny search engine for static
 license = "Apache-2.0/MIT"
 
 [dependencies]
-bincode = "1.2.1"
-tinysearch-cuckoofilter = "0.4.1"
+bincode = "1.3.1"
+
+[dependencies.cuckoofilter]
+version = "0.5.0"
+default-features = false 
+features = ["serde_support"]
