Move to Xor filters (#141)

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ tinysearch_engine.js
 tinysearch_engine.d.ts
 tinysearch_engine_bg.wasm
 tinysearch_engine_bg.d.ts
+tinysearch_engine_bg.wasm.d.ts
 package.json
 pkg/
 demo.html
+.vscode
