--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -1,15 +1,19 @@
 [package]
 name = "tinysearch-shared"
-version = "0.2.1"
+version = "0.6.0"
 authors = ["Matthias Endler <matthias-endler@gmx.net>"]
 edition = "2018"
 description = "Shared libraries for tinysearch - a tiny search engine for static websites"
 license = "Apache-2.0/MIT"
 
 [dependencies]
-bincode = "1.3.1"
+bincode = "1.3.3"
 
-[dependencies.cuckoofilter]
-version = "0.5.0"
+[dependencies.serde]
+version = "1.0.127"
+features = ["derive"]
+
+[dependencies.xorf]
+version = "0.7.2"
 default-features = false 
-features = ["serde_support"]
+features = ["serde"]
