--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,10 +56,10 @@ jobs:
       - name: Print wasm-pack version
         run: wasm-pack --version
 
-      - name: Build & install tinysearch
+      - name: Build and install tinysearch
         run: cargo install --force --path bin
 
-      - name: Build wasm package
+      - name: Build WASM package from test index
         run: RUST_LOG=debug tinysearch fixtures/index.json
 
       - name: Audit for Security Vulnerabilities
@@ -72,15 +72,6 @@ jobs:
         with:
           command: doc
           args: --all-features --no-deps
-
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          prerelease: true
-          files: target/release/tinysearch
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish-check:
     if: startsWith(github.ref, 'refs/tags/') != true
@@ -122,3 +113,12 @@ jobs:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         with:
           command: publish
+          
+      - name: Create Github release for Linux, Windows, and macOS
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          prerelease: true
+          files: target/release/tinysearch
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
