--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,11 +89,16 @@ jobs:
         with:
           command: fetch
 
-      - name: Publish check
+      # Note that we don't check `bin` here as it depends on `shared`
+      # to be published (which we don't do during dry-run).
+      # This could be fixed by allowing publish relative paths.
+      # https://github.com/rust-lang/cargo/issues/6738
+      # https://github.com/rust-lang/cargo/issues/1565
+      - name: Publish check for shared
         uses: actions-rs/cargo@v1
         with:
-          command: publish
-
+          command: publish --dry-run --manifest-path shared/Cargo.toml
+          
   publish:
     if: startsWith(github.ref, 'refs/tags/')
     needs:
@@ -107,12 +112,19 @@ jobs:
         with:
           command: fetch
 
-      - name: Publish
+      - name: Publish shared
         uses: actions-rs/cargo@v1
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         with:
-          command: publish
+          command: publish --manifest-path shared/Cargo.toml
+          
+      - name: Publish binary
+        uses: actions-rs/cargo@v1
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        with:
+          command: publish --manifest-path bin/Cargo.toml
           
       - name: Create Github release for Linux, Windows, and macOS
         uses: softprops/action-gh-release@v1
