--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,7 +97,8 @@ jobs:
       - name: Publish check for shared
         uses: actions-rs/cargo@v1
         with:
-          command: publish --dry-run --manifest-path shared/Cargo.toml
+          command: publish
+          args: --dry-run --manifest-path shared/Cargo.toml
           
   publish:
     if: startsWith(github.ref, 'refs/tags/')
@@ -117,14 +118,16 @@ jobs:
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         with:
-          command: publish --manifest-path shared/Cargo.toml
+          command: publish
+          args: --manifest-path shared/Cargo.toml
           
       - name: Publish binary
         uses: actions-rs/cargo@v1
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         with:
-          command: publish --manifest-path bin/Cargo.toml
+          command: publish
+          args: --manifest-path bin/Cargo.toml
           
       - name: Create Github release for Linux, Windows, and macOS
         uses: softprops/action-gh-release@v1
