--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,10 @@ on:
   schedule:
     # Runs every Thursday at 20:23 GMT to avoid bit rot
     - cron: "20 23 * * 4"
+  release:
+    types: 
+      - edited
+      - published
 
 jobs:
   test:
