--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
 name = "tinysearch-shared"
-version = "0.6.4"
+version = "0.7.0"
 authors = ["Matthias Endler <matthias-endler@gmx.net>"]
 edition = "2021"
 description = "Shared libraries for tinysearch - a tiny search engine for static websites"
 license = "Apache-2.0/MIT"
+documentation = "https://github.com/mre/tinysearch/blob/master/README.md"
+homepage = "https://github.com/mre/tinysearch"
+repository = "https://github.com/mre/tinysearch"
 
 [dependencies]
 bincode = "1.3.3"
