Fix wrong ignore path and create a lot of features (#168)
* Fix wrong ignore path
* Fix other issues
* Fix CI
* Update `.github/workflows/ci.yml`
* Add more verbose error and try to fix for new wasm-pack version
* Update dependencies
* allow nightly failures
* Format; lint
---------

Signed-off-by: Pavel Pletenev <cpp.create@gmail.com>
Co-authored-by: Matthias Endler <matthias@endler.dev>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,31 +21,84 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: actions-rs/toolchain@v1
+      - uses: ./.github/actions/cached-toolchain
+        id: toolchain
         with:
-          toolchain: stable
+          toolchain: 'stable'
+      
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target
+          key: test-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-toolchain-${{ steps.toolchain.outputs.cachekey  }}
+          restore-keys: | 
+            test-${{ runner.os }}-cargo-
 
-      - name: Run cargo test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
+      - run: cargo test --all-features
 
   build:
     runs-on: ubuntu-latest
     strategy:
+        fail-fast: false
         matrix:
             rust: [stable, beta, nightly]
 
     steps:
       - uses: actions/checkout@v1
+      
+      - uses: ./.github/actions/cached-toolchain
+        id: toolchain
+        with:
+          toolchain: ${{matrix.rust}}
 
-      - name: Set Rust version
-        env:
-          RUST_VERSION: ${{ matrix.rust }}
-        run: rustup default ${RUST_VERSION}
+      - uses: actions/cache/restore@v3 # fetched cargo cache
+        id: cache-cargo-install-restore
+        with:
+          path: |
+            ~/.cargo
+          key: build-tools-${{matrix.rust}}-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-toolchain-${{ steps.toolchain.outputs.cachekey  }}
+          restore-keys: | 
+            build-tools-${{matrix.rust}}-${{ runner.os }}-cargo-
 
-      - if: matrix.rust == 'stable'
-        run: rustup component add clippy
+      - name: Install wasm-pack
+        run:
+          cargo install --git https://github.com/mre/wasm-pack.git --branch first-class-bins
+    
+      - name: Print wasm-pack version
+        run: wasm-pack --version
+
+      - name: Install trunk
+        run:
+          cargo install --locked trunk@0.17.2 # latest on 2023.07.24
+
+      - name: Print trunk version
+        run: trunk --version
+      
+      - uses: actions/cache/save@v3 # saves cargo cache
+        with:
+          path: |
+            ~/.cargo
+          key: ${{ steps.cache-cargo-install-restore.outputs.cache-primary-key }}
+      
+      - uses: actions/cache@v3 # fetched cargo cache
+        id: cache-cargo-restore
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target
+          key: build-${{matrix.rust}}-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-toolchain-${{ steps.toolchain.outputs.cachekey  }}
+          restore-keys: | 
+            build-${{matrix.rust}}-${{ runner.os }}-cargo-
+
+      - name: cargo fetch
+        run: cargo fetch --locked
 
       - if: matrix.rust == 'stable'
         uses: actions-rs/clippy-check@v1
@@ -53,18 +106,20 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --all-features
 
-      - name: Install wasm-pack
-        run:
-          cargo install --force --git https://github.com/mre/wasm-pack.git --branch first-class-bins
-
-      - name: Print wasm-pack version
-        run: wasm-pack --version
-
       - name: Build and install tinysearch
-        run: cargo install --force --path bin
+        run: cargo install --force --path tinysearch --features=bin
+        continue-on-error: ${{ matrix.rust == 'nightly' }}
 
       - name: Build WASM package from test index
-        run: RUST_LOG=debug tinysearch fixtures/index.json
+        run: RUST_LOG=debug tinysearch -e 'path= "'$PWD'/tinysearch"' fixtures/index.json
+        continue-on-error: ${{ matrix.rust == 'nightly' }}
+      
+      - name: Build examples
+        run:
+          for example in `ls -1 examples`; do
+            (cd "examples/$example" && trunk build index.html) || exit 1;
+          done
+        continue-on-error: ${{ matrix.rust == 'nightly' }}
 
       - name: Audit for Security Vulnerabilities
         uses: actions-rs/audit-check@v1
@@ -77,33 +132,6 @@ jobs:
           command: doc
           args: --all-features --no-deps
 
-  publish-check:
-    if: startsWith(github.ref, 'refs/tags/') != true
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
-
-      - name: cargo fetch
-        uses: actions-rs/cargo@v1
-        with:
-          command: fetch
-
-      # Note that we don't check `bin` here as it depends on `shared`
-      # to be published (which we don't do during dry-run).
-      # This could be fixed by allowing publish relative paths.
-      # https://github.com/rust-lang/cargo/issues/6738
-      # https://github.com/rust-lang/cargo/issues/1565
-      - name: Publish check for shared
-        uses: actions-rs/cargo@v1
-        with:
-          command: publish
-          args: --dry-run --manifest-path shared/Cargo.toml
-          
   publish:
     if: startsWith(github.ref, 'refs/tags/')
     needs:
@@ -117,24 +145,7 @@ jobs:
         with:
           command: fetch
 
-      - name: Publish shared
-        uses: actions-rs/cargo@v1
-        env:
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        with:
-          command: publish
-          args: --manifest-path shared/Cargo.toml
-
-      # The crates.io API might be delayed by a few seconds.
-      # As a result, the newly published `shared` might not be
-      # published when the binary that depends on it wants to pull it.
-      # Wait a few seconds to avoid that race-condition.
-      - name: Wait for cargo publication
-        uses: juliangruber/sleep-action@v1
-        with:
-          time: 30s
-
-      - name: Publish binary
+      - name: Publish
         uses: actions-rs/cargo@v1
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
