--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,8 @@ jobs:
         id: get_release
         uses: bruceadams/get-release@v1.2.2
         env:
-          GITHUB_TOKEN: ${{ github.token }}              
-          
+          GITHUB_TOKEN: ${{ github.token }}
+
   linux:
     runs-on: ubuntu-latest
     needs: prepare
@@ -58,12 +58,10 @@ jobs:
           sudo apt-get install -y binutils-aarch64-linux-gnu 
 
       - uses: actions/checkout@v2
-        
-      - uses: actions-rs/toolchain@v1
+      - uses: ./.github/actions/cached-toolchain
         with:
-          profile: minimal
           toolchain: stable
-          default: true
+          targets: ${{ matrix.target }}
 
       - name: Build ${{ matrix.target }}
         uses: actions-rs/cargo@v1
