--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,4 @@
-target
-storage
-tinysearch_engine.js
-tinysearch_engine.d.ts
-tinysearch_engine_bg.wasm
-tinysearch_engine_bg.d.ts
-tinysearch_engine_bg.wasm.d.ts
-package.json
-pkg/
-wasm_output/
+target/
 .vscode
-tinysearch-engine
+storage
+wasm_output/
