--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,7 +133,6 @@ jobs:
           args: --all-features --no-deps
 
   publish:
-    if: startsWith(github.ref, 'refs/tags/')
     needs:
       - test
     runs-on: ubuntu-latest
@@ -145,7 +144,16 @@ jobs:
         with:
           command: fetch
 
+      - name: Publish (dry run)
+        uses: actions-rs/cargo@v1
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        with:
+          command: publish
+          args: --manifest-path tinysearch/Cargo.toml --dry-run
+
       - name: Publish
+        if: startsWith(github.ref, 'refs/tags/')
         uses: actions-rs/cargo@v1
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
@@ -154,6 +162,7 @@ jobs:
           args: --manifest-path tinysearch/Cargo.toml
           
       - name: Create Github release for Linux, Windows, and macOS
+        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
           prerelease: true
