--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,11 +107,11 @@ jobs:
           args: --all-features
 
       - name: Build and install tinysearch
-        run: cargo install --force --path tinysearch --features=bin
+        run: cargo install --force --path . --features=bin
         continue-on-error: ${{ matrix.rust == 'nightly' }}
 
       - name: Build WASM package from test index
-        run: RUST_LOG=debug tinysearch --engine-version 'path= "'$PWD'/tinysearch"' fixtures/index.json
+        run: RUST_LOG=debug tinysearch --engine-version 'path= "'$PWD'"' fixtures/index.json
         continue-on-error: ${{ matrix.rust == 'nightly' }}
       
       - name: Build examples
@@ -150,7 +150,7 @@ jobs:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         with:
           command: publish
-          args: --manifest-path tinysearch/Cargo.toml --dry-run
+          args: --dry-run
 
       - name: Publish
         if: startsWith(github.ref, 'refs/tags/')
@@ -159,7 +159,6 @@ jobs:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         with:
           command: publish
-          args: --manifest-path tinysearch/Cargo.toml
           
       - name: Create Github release for Linux, Windows, and macOS
         if: startsWith(github.ref, 'refs/tags/')
