Workaround for including crate inside crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ homepage = "https://github.com/mre/tinysearch"
 repository = "https://github.com/mre/tinysearch"
 
 readme = "README.md"
-include = ["src/**/*", "assets", "README.md"]
+include = ["src", "assets", "README.md"]
 
 [lib]
 
